Меняет текст снизу

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 
     <section class="portfolio">
       <div class="container"">
-      <h2 class="subheading">Мои работы</h2>
+      <h2 class="subheading">ТАК ТАК ПААЖДИ, ЩА ЧЕЛОВЕЧЕК ПОДСКОЧЕТ</h2>
 
-      <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг о школе для начинающих.</p>
+      <h3>А КТО СИЛЬНЫЙ?</h3>
+      <p>Сильный не тот, кто в качалке качался... а кто упал и отжался!</p>
 
-      <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
+      <h3>ЛЮБИМАЯ ФРАЗА</h3>
+      <p>Бей бабу молотомЮ будет баба золотом!</p>
     </div>
     </section>
 
     <footer class="page-footer">
       <div class="container"">
-      Контакты в подвале
+      С МУЖИКАМИ В ПОДВАЛЕ РВЕМ ЖЕЛЕЗО НАХУЙ
     </div>
     </footer>
   </body>
