--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <header class="page-header">
       <div class="container">
+          <a class="header-email" href="mailto:zhopa@zhopa.ru">zhopa@zhopa.ru</a>
+        </a>
+         <a class="header-phone"href="tel:86661488228">8 666 148 82 28</a>
+        </a>
       ЛОГОВО ВОЛЧАР
     </div>
     </header>
@@ -23,8 +27,15 @@
 
     <section class="intro">
       <div class="container"">
+    <figure class="project-image">
+      <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
+    </figure>
       <h2 class="subheading">Ну ебана рот</h2>
       <h3>Меня зовут ЛЕХА</h3>
+      <figure class="user-image">
+      <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+      </figure>
       <p>И я ебашу ебала.</p>
       <h3>Я вычислю любого ,сука, хитрого кидалу.</h3>
       <p>Со мной ваще нахуй лучше не общаться.</p>
@@ -45,6 +56,8 @@
 
     <footer class="page-footer">
       <div class="container"">
+        <a class="footer-email" href="mailto:mailto:zhopa@zhopa.ru">zhopa@zhopa.ru"</a>
+    <a class="footer-phone" href="tel:86661488228">8 666 148 82 28</a>
       С МУЖИКАМИ В ПОДВАЛЕ РВЕМ ЖЕЛЕЗО НАХУЙ
     </div>
     </footer>
